--- a/.yo-rc.json
+++ b/.yo-rc.json
@@ -14,7 +14,14 @@
       "sass": true,
       "uirouter": true,
       "bootstrap": true,
-      "uibootstrap": true
+      "uibootstrap": true,
+      "socketio": true,
+      "mongoose": true,
+      "auth": true,
+      "oauth": true,
+      "googleAuth": true,
+      "facebookAuth": true,
+      "twitterAuth": true
     }
   },
   "generator-ng-component": {
