--- a/package.json
+++ b/package.json
@@ -7,17 +7,30 @@
     "composable-middleware": "^0.3.0",
     "compression": "~1.0.1",
     "connect-mongo": "^0.4.1",
+    "connect-pg-simple": "^2.2.1",
     "cookie-parser": "~1.0.1",
     "ejs": "~0.8.4",
     "errorhandler": "~1.0.0",
     "express": "~4.0.0",
+    "express-jwt": "^0.1.3",
     "express-session": "~1.0.2",
+    "jsonwebtoken": "^0.3.0",
     "lodash": "~2.4.1",
     "method-override": "~1.0.0",
+    "moment": "^2.9.0",
+    "mongoose": "~3.8.8",
     "morgan": "~1.0.0",
-    "node-phantom-simple": "^1.2.0",
-    "phantom": "^0.7.1",
-    "serve-favicon": "~2.0.1"
+    "passport": "~0.2.0",
+    "passport-facebook": "latest",
+    "passport-google-oauth": "latest",
+    "passport-local": "~0.1.6",
+    "passport-twitter": "latest",
+    "pg": "^4.2.0",
+    "sequelize": "^2.0.0-rc7",
+    "serve-favicon": "~2.0.1",
+    "socket.io": "^1.0.6",
+    "socket.io-client": "^1.0.6",
+    "socketio-jwt": "^2.0.2"
   },
   "devDependencies": {
     "grunt": "~0.4.4",
